# cssync

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  cssync.sln
.github/: pr_template_branch_to_dev.md  pr_template_dev_to_main.md  pull_request_template.md
cli/: README.md  pyproject.toml
cli/CS-Sync-CLI/: linux.py  main.py  rclone.py
cli/CS-Sync-CLI/helper/: logConfig.py
src/cssync.Backend/: Cssync.cs  Globals.cs  Program.cs  Rclone.cs  Rpc.cs  cssync.Backend.csproj
src/cssync.Backend/helper/: Globals.cs  Json.cs  Logging.cs  ModifyConfig.cs  ParseInput.cs  Resources.cs
src/cssync.Cli/: Constants.cs  Globals.cs  Program.cs  cssync.Cli.csproj
src/cssync.Cli/helper/: GetInput.cs  Globals.cs  Terminal.cs
ui/: README.md
